--- a/startsida2016/index.html
+++ b/startsida2016/index.html
@@ -34,46 +34,41 @@
 
                 </div>
 
-
             </div>
 
         </section>
 
-    
+    <br>
+
     <div class="row">
       <div class="large-12 medium-12 small-12 columns">
-
-        
-        <br>
-        <br>
-        <!-- Grid Example -->
-
-        <div class="row rotate columns">
-          <div class="large-12 columns">
-            <div class="feature primary">
+          <div class="feature">
+            <div class="container">
               <div class="itemleft">
-              <h2>URBANEARS PLATTAN PÅ KÖPET</h2>
-              <p>Just nu får du ett par Urbanears Plattan när du tecknar eller förlänger ditt abonnemang. Morbi venenatis metus vitae luctus tempor. Mauris dignissim sapien nibh lorem ipsum.</p><br>
-              <button class="large button" style="font-weight:bold;">LÄS MER</button>
-              </div>
-              <div class="itemright">
-              <img src="images/urbanearsplattan.png">
+                <h2>URBANEARS PLATTAN PÅ KÖPET</h2>
+                <p>Just nu får du ett par Urbanears Plattan när du tecknar eller förlänger ditt abonnemang. Morbi venenatis metus vitae luctus tempor. Mauris dignissim sapien nibh lorem ipsum.</p><br>
+                <button class="large button" style="font-weight:bold;">VISA ERBJUDANDET</button>
+                </div>
+                <div class="itemright">
+                <img src="images/urbanearsplattan.png">
+                </div> 
               </div>
             </div>
           </div>
         </div>
-        <br>
+      </div>
+
         <div class="row">
           <div class="large-6 medium-6 small-12 columns">
             <div class="left_box">
               <div class="container">
                 <div class="itemleft">
-                  <h3>BYT IN DIN GAMLA MOBIL HOS OSS</h3>
-                  <p>Vi bjuder på 3 fira mån Spotify när du köper iPhone 6S & 6S Plus med...</p><br>
-                  <button class="large button" style="font-weight:bold;">BYT IN MOBILEN</button>
+                <h3>BYT IN DIN GAMLA MOBIL HOS OSS</h3>
+                <p>Vi bjuder på 3 fira mån Spotify när du köper iPhone 6S & 6S Plus med...</p><br>
+                <button class="large button" style="font-weight:bold;">BYT IN MOBILEN</button>
                 </div>
                 <div class="itemright">
-                  <img src="images/left-png.png">
+                <img src="images/left-png.png">
                 </div>
               </div>
             </div>
@@ -92,20 +87,19 @@
             </div>
           </div>
         </div>
-        <br>
         <div class="row">
           <div class="large-4 medium-4 columns">
-            <div class="one primary callout">
+            <div class="one primary">
               <p>Columnar Highlight 1</p>
             </div>
           </div>
           <div class="large-4 medium-4 columns">
-            <div class="two primary callout">
+            <div class="two primary">
               <p>Columnar Highlight 1</p>
             </div>
           </div>
           <div class="large-4 medium-4 columns">
-            <div class="three primary callout">
+            <div class="three primary">
               <p>Columnar Highlight 1</p>
             </div>
           </div>
