--- a/teliaic/landingpage.html
+++ b/teliaic/landingpage.html
@@ -18,21 +18,6 @@
 <!-- JS files -->
 <script type="text/javascript" src="http://form-cdn.pardot.com/js/piUtils.js?ver=20130530"></script>
 
-<!-- Scripts -->
-<script type="text/javascript">
-piAId = '72232';
-piCId = '5360';
-
-(function() {
-  function async_load(){
-    var s = document.createElement('script'); s.type = 'text/javascript';
-    s.src = ('https:' == document.location.protocol ? 'https://pi' : 'http://cdn') + '.pardot.com/pd.js';
-    var c = document.getElementsByTagName('script')[0]; c.parentNode.insertBefore(s, c);
-  }
-  if(window.attachEvent) { window.attachEvent('onload', async_load); }
-  else { window.addEventListener('load', async_load, false); }
-})();
-</script>
 
 <script>
 (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
@@ -49,24 +34,78 @@ ga('create','UA-70497438-1','auto');ga('send','pageview');
 <body class="no-js">
 
 <div class="header">
-  HEADER
+  <div class="inner">
+    <img src='./img/logo.png' class="logo">
+    <div class="nav1"><a href="http://www.teliasoneraic.com/Newsroom">Newsroom</a> <a href="http://www.teliasoneraic.com/About-us">About Us</a> <a href="http://www.teliasoneraic.com/Customer-care/Contact">Contact Us</a></div>
+    <div class="nav2"><a href="#">Search</a> <a href="http://www.teliasoneraic.com/Customer-care">Customer Service</a></div>
+  </div>
 </div>
 
-<div class="hero">
-  HERO
+<div class="breadcrumbs">
+  <div class="inner">
+    <div class="links"><a href="http://www.teliasoneraic.com/">Start</a><p>/</p><a href="http://www.teliasoneraic.com/Newsroom">Newsroom</a><p>/</p><a href="http://www.teliasoneraic.com/Newsroom/Downloads">Downloads</a></div>
+  </div>
 </div>
 
 <div class="content">
-  <br>
-  <h2>PREVIEW</h2>
-  <br>
+  <div class="inner">
   %%content%%
-  <br>
-  <br>
+  </div>
 </div>
 
 <div class="footer">
-  FOOTER
+      <div class="inner">
+        <div>
+          <h4><a href="http://www.teliasoneraic.com/Our-beliefs.html"><span>Our beliefs</span></a></h4><br>
+            <a title="Vision &amp; mission" href="http://www.teliasoneraic.com/Our-beliefs/Vision-and-mission.html">Vision &amp; mission</a><br>
+            <a title="Carrier declarations" href="http://www.teliasoneraic.com/Our-beliefs/Carrier-declarations.html">Carrier declarations</a><br>
+            <a title="Connectivity trends" href="http://www.teliasoneraic.com/Our-beliefs/Connectivity-trends.html">Connectivity trends</a><br>
+        </div>
+        <div>
+          <h4><a href="http://www.teliasoneraic.com/Your-business.html"><span>Your business</span></a></h4><br>
+            <a title="Content and application providers" href="http://www.teliasoneraic.com/Your-business/Content-and-application-providers.html">Content and application providers</a><br>
+            <a title="Gaming companies" href="http://www.teliasoneraic.com/Your-business/Gaming-companies.html">Gaming companies</a><br>
+            <a title="Startups" href="http://www.teliasoneraic.com/Your-business/Startups.html">Startups</a><br>
+            <a title="Fixed operators" href="http://www.teliasoneraic.com/Your-business/Fixed-operators.html">Fixed operators</a><br>
+            <a title="Mobile operators" href="http://www.teliasoneraic.com/Your-business/Mobile-operators.html">Mobile operators</a><br>
+            <a title="Media network providers" href="http://www.teliasoneraic.com/Your-business/Media-network-providers.html">Media network providers</a><br>
+            <a title="Other sectors" href="http://www.teliasoneraic.com/Your-business/Other-sectors.html">Other sectors</a><br>
+            <a title="Partner program" href="http://www.teliasoneraic.com/Your-business/Partner-program.html">Partner program</a><br>
+        </div>
+        <div>
+          <h4><a href="http://www.teliasoneraic.com/Our-network.html"><span>Our network</span></a></h4><br>
+            <a title="Network map" href="http://www.teliasoneraic.com/Our-network/Network-map.html">Network map</a><br>
+            <a title="Looking-glass" href="http://www.teliasoneraic.com/Our-network/Looking-glass.html">Looking-glass</a><br>
+            <a title="Network videos" href="http://www.teliasoneraic.com/Our-network/Network-videos.html">Network videos</a><br>
+            <a title="Future demands" href="http://www.teliasoneraic.com/Our-network/Future-demands.html">Future demands</a><br>
+            <a title="Middle East expansion" href="http://www.teliasoneraic.com/Our-network/Middle-East-Expansion.html">Middle East expansion</a><br>
+            <a title="Expansion in the Americas" href="http://www.teliasoneraic.com/Our-network/Expansion-in-the-Americas.html">Expansion in the Americas</a><br>
+            <a title="Internet in your pocket" href="http://www.teliasoneraic.com/Our-network/Internet-in-your-pocket.html">Internet in your pocket</a><br>
+        </div>
+        <div>
+          <h4><a href="http://www.teliasoneraic.com/Our-services.html"><span>Our services</span></a></h4><br>
+            <a title="IP" href="http://www.teliasoneraic.com/Our-services/IP.html">IP</a><br>
+            <a title="Ethernet" href="http://www.teliasoneraic.com/Our-services/Ethernet.html">Ethernet</a><br>
+            <a title="Wavelengths" href="http://www.teliasoneraic.com/Our-services/Wavelengths.html">Wavelengths</a><br>
+            <a title="Infrastructure" href="http://www.teliasoneraic.com/Our-services/Infrastructure.html">Infrastructure</a><br>
+            <a title="Roaming services over IPX" href="http://www.teliasoneraic.com/Our-services/IPX.html">Roaming services over IPX</a><br>
+            <a title="Voice" href="http://www.teliasoneraic.com/Our-services/Voice.html">Voice</a><br>
+            <a title="Network Outsourcing" href="http://www.teliasoneraic.com/Our-services/Network-Outsourcing.html">Network Outsourcing</a><br>
+        </div>
+        <div>
+          <h4><a href="http://www.teliasoneraic.com/Customer-care.html"><span>Customer Care</span></a></h4><br>
+            <a title="Contact" href="http://www.teliasoneraic.com/Customer-care/Contact.html">Contact</a><br>
+            <a title="Online tools" href="http://www.teliasoneraic.com/Customer-care/Online-tools.html">Online tools</a><br>
+        </div>
+      </div>
+    </div>
+<div class="footersocial">
+  <div class="inner">
+    <div class="social">
+    <center><img src='./img/facebook.png'><img src='./img/youtube.png'><img src='./img/twitter.png'>
+    <p>© Telia 556430-0142, Box 50077, 973 22 Luleå</p></center>
+    </div>
+  </div>
 </div>
 
 <script type="text/javascript" src="http://s7.addthis.com/js/300/addthis_widget.js#pubid=tsic" async="async"></script>
