--- a/teliaic/landingpage.html
+++ b/teliaic/landingpage.html
@@ -19,8 +19,7 @@
 <script type="text/javascript" src="http://form-cdn.pardot.com/js/piUtils.js?ver=20130530"></script>
 
 <script type="text/javascript">
-document.getElementById("71232_79962pi_71232_79962").value = "Enter business email to download article
-";
+document.getElementById("71232_79962pi_71232_79962").value = "Enter business email to download article";
 </script>
 
 <script>
