--- a/teliaic/landingpage.html
+++ b/teliaic/landingpage.html
@@ -101,8 +101,8 @@ ga('create','UA-70497438-1','auto');ga('send','pageview');
 <div class="footersocial">
   <div class="inner">
     <div class="social">
-    <center><img src='./img/facebook.png'><img src='./img/youtube.png'><img src='./img/twitter.png'>
-    <p>© Telia 556430-0142, Box 50077, 973 22 Luleå</p></center>
+      <img src='http://petterziggy.github.io/teliaic/./img/facebook.png'><img src='http://petterziggy.github.io/teliaic/./img/youtube.png'><img src='http://petterziggy.github.io/teliaic/./img/twitter.png'>
+      <p>© Telia 556430-0142, Box 50077, 973 22 Luleå</p>
     </div>
   </div>
 </div>
