--- a/startsida2016/index.html
+++ b/startsida2016/index.html
@@ -88,17 +88,17 @@
           </div>
         </div>
         <div class="row">
-          <div class="large-4 medium-4 columns">
+          <div class="large-4 medium-4 small-6 columns">
             <div class="one primary">
               <p>Columnar Highlight 1</p>
             </div>
           </div>
-          <div class="large-4 medium-4 columns">
+          <div class="large-4 medium-4 small-6 columns">
             <div class="two primary">
               <p>Columnar Highlight 1</p>
             </div>
           </div>
-          <div class="large-4 medium-4 columns">
+          <div class="large-4 medium-4 small-6 columns">
             <div class="three primary">
               <p>Columnar Highlight 1</p>
             </div>
