--- a/startsida2016/index.html
+++ b/startsida2016/index.html
@@ -27,7 +27,7 @@
                 <div class="item right columns">
 
                     <div class="hero-text">
-                        <h1>SAMMA PRISER<br>SOM HEMMA</h1>
+                        <h1 style="color:#990ae3;">SAMMA PRISER<br>SOM HEMMA</h1>
                         <p>Nu surfar och ringer du i Norden och Baltikum till exakt samma pris som du gör på hemmaplan</p><br>
                         <button class="large button" style="font-weight:bold;">MOBILABONNEMANG</button><br>
                     </div>
@@ -87,20 +87,62 @@
             </div>
           </div>
         </div>
+
         <div class="row">
-          <div class="large-4 medium-4 small-6 columns">
-            <div class="one primary">
-              <p>Columnar Highlight 1</p>
+          <div class="xlarge-8 small-12 columns">
+           <div class="newswide">
+              <div class="container">
+                <div class="inner1">
+              <img src="./images/wit2016.png" width="100%">
+                </div>
+                <div class="inner2">
+              <p style="color:grey; font-size:14px;">2016-03-08 06:00</p>
+              <h4>FÖLJ KONFERENSEN WOMEN IN TECH LIVE</h4>
+              <p style="color:#333;">I dag arrangeras konferensen Women in tech för tredje året i rad på internationella kvinnodagen. TeliaSonera tillsammans med sex av Sveriges största media- och teknikföretag står bakom evenemanget. På Viaplays hemsida kan du se eventet live.</p>
+                </div>
+              </div>
+             </div>
+          </div>
+         </div> 
+          <div class="xlarge-4 large-6 columns">
+            <div class="newssmall">
+              <div class="container">
+              <img src="./images/hdchannels.png" width="100%">
+              <br /><br />
+              <p style="color:grey; font-size:14px;">2016-03-08 06:00</p>
+              <h4>NU INKLUDERAS HD-KANALER I VÅRA TV-PAKET</h4>
+              </div>
             </div>
           </div>
-          <div class="large-4 medium-4 small-6 columns">
-            <div class="two primary">
-              <p>Columnar Highlight 1</p>
+
+          <div class="xlarge-4 large-6 columns">
+            <div class="newssmall">
+              <div class="container">
+              <img src="./images/info.png" width="100%">
+              <br /><br />
+              <p style="color:grey; font-size:14px;">2016-03-08 06:00</p>
+              <h4>LÄNGRE BETALNINGSPERIOD FÖR VISSA JANUARIFAKTUROR</h4>
+              </div>
             </div>
           </div>
-          <div class="large-4 medium-4 small-6 columns">
-            <div class="three primary">
-              <p>Columnar Highlight 1</p>
+          <div class="xlarge-4 large-6 columns">
+            <div class="newssmall">
+              <div class="container">
+              <img src="./images/fast.png" width="100%">
+              <br /><br />
+              <p style="color:grey; font-size:14px;">2016-03-08 06:00</p>
+              <h4>TELIAS MOBILE BREDBAND SNABBAST I SVERIGE</h4>
+              </div>
+            </div>
+          </div>
+          <div class="xlarge-4 large-6 columns">
+            <div class="newssmall">
+              <div class="container">
+              <img src="./images/prize.png" width="100%">
+              <br /><br />
+              <p style="color:grey; font-size:14px;">2016-03-08 06:00</p>
+              <h4>TELIA ÅRETS OPERATÖR PÅ TELEKOMGALAN</h4>
+              </div>
             </div>
           </div>
         </div>
