--- a/startsida2016/index.html
+++ b/startsida2016/index.html
@@ -89,8 +89,8 @@
         </div>
 
         <div class="row">
-          <div class="xlarge-8 small-12 columns">
-           <div class="newswide">
+          <div class="small-12 large-12 xlarge-8 xxlarge-8 columns">
+            <div class="newswide">
               <div class="container">
                 <div class="inner1">
               <img src="./images/wit2016.png" width="100%">
@@ -101,10 +101,10 @@
               <p style="color:#333;">I dag arrangeras konferensen Women in tech för tredje året i rad på internationella kvinnodagen. TeliaSonera tillsammans med sex av Sveriges största media- och teknikföretag står bakom evenemanget. På Viaplays hemsida kan du se eventet live.</p>
                 </div>
               </div>
-             </div>
+            </div>
           </div>
-         </div> 
-          <div class="xlarge-4 large-6 columns">
+
+          <div class="small-12 large-6 xlarge-4 xxlarge-4 columns">
             <div class="newssmall">
               <div class="container">
               <img src="./images/hdchannels.png" width="100%">
@@ -115,7 +115,7 @@
             </div>
           </div>
 
-          <div class="xlarge-4 large-6 columns">
+          <div class="small-12 large-6 xlarge-4 xxlarge-4 columns" style="float:right;">
             <div class="newssmall">
               <div class="container">
               <img src="./images/info.png" width="100%">
@@ -125,7 +125,7 @@
               </div>
             </div>
           </div>
-          <div class="xlarge-4 large-6 columns">
+          <div class="small-12 large-6 xlarge-4 xxlarge-4 columns">
             <div class="newssmall">
               <div class="container">
               <img src="./images/fast.png" width="100%">
@@ -135,7 +135,7 @@
               </div>
             </div>
           </div>
-          <div class="xlarge-4 large-6 columns">
+          <div class="small-12 large-6 xlarge-4 xxlarge-4 columns">
             <div class="newssmall">
               <div class="container">
               <img src="./images/prize.png" width="100%">
